<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/codeword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/codeword" />

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="15"
        android:hint="@string/input"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="15"
        android:hint="@string/output"
        android:inputType="textLongMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="encode"
        android:text="@string/encode" />
	<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="decode"
        android:text="@string/decode" />
    
</LinearLayout>